🔧 Updated footer with my name

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="text-center mt-5">
-  <p>© 2025 YourSpace | All rights reserved</p>
+  <p>Built with 💻 & ☕ by Chandradeo Kumar</p>
 </footer>
 
 <!-- Bootstrap Bundle JS -->
