--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,14 @@
   <div class="intro-heading text-center">
     <h1 class="intro-title">MySpace</h1>
     <p class="intro-line">A Space For All Your Files</p>
-    <div class="upload mt-3">
-      <a href="/compose" class="btn btn-primary btn-lg btn-upload">
-        <i class="bi bi-upload"></i> UPLOAD
-      </a>
-    </div>
+
+    <% if (user) { %>
+      <div class="upload mt-3">
+        <a href="/compose" class="btn btn-primary btn-lg btn-upload">
+          <i class="bi bi-upload"></i> UPLOAD
+        </a>
+      </div>
+    <% } %>
   </div>
 
   <div class="container py-4">
@@ -31,6 +34,16 @@
                   <button class="btn btn-primary open-btn">OPEN</button>
                 </a>
               </div>
+
+              <% if (user) { %>
+              <div class="d-flex justify-content-center gap-2 mt-2">
+                <form action="/posts/<%= post._id %>/delete" method="POST">
+                  <button class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                </form>
+                <a href="/posts/<%= post._id %>/edit" class="btn btn-warning btn-sm">Edit</a>
+              </div>
+              <% } %>
+
             </div>
           </div>
         </div>
